# LifeRadar

./: .dockerignore  .env.example  .env.local.example  .gitignore  .trigger-rebuild  Dockerfile  Dockerfile.api  Dockerfile.beeper-sidecar  Dockerfile.beeper-sidecar-proxy-test  Dockerfile.chat-gateway  Dockerfile.matrix-bridge  Dockerfile.matrix-services  Dockerfile.mcp  Dockerfile.messaging-runtime  Dockerfile.worker  README.md  SPEC.md  docker-compose.legacy.yaml  docker-compose.local.yaml  docker-compose.preview.yaml  docker-compose.yaml  docker-compose.yml
.claude/: settings.local.json
.pi/: superpowers-state.json
.swarm/: memory.db  schema.sql
api/: __init__.py  db.py  main.py  matrix_bridge.py  models.py  requirements.txt
chat-gateway/: package.json  server.mjs
chat-gateway/src/: db.mjs
chat-gateway/src/providers/: base.mjs  telegram.mjs  whatsapp.mjs
docs/: beeper-sidecar-decision.md  bepper-oauth-e2ee-strategy.md  go-rewrite-roadmap.md  matrix-rehabilitation-plan.md
docs/handovers/: 2026-04-26-coolify-outage.md
fixtures/msgraph/: delta-page-1.json  me.json  token.json
lib/: runtime.mjs
liferadar-api/: go.mod  go.sum  main.go  main_test.go
liferadar-matrix/: Cargo.toml
liferadar-matrix/src/: main.rs
matrix-rust-probe/: Cargo.toml
matrix-rust-probe/src/: adapter.rs  main.rs
mcp-server/: Dockerfile  docker-compose.yml  requirements.txt  server.py
messaging-runtime/: go.mod
messaging-runtime/cmd/liferadar-messaging-runtime/: main.go  main_test.go
schema/: schema.sql
tests/: beeper-proxy-body-test.py  test_api.py
