[package]
name = "life-radar-matrix-rust-probe"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
matrix-sdk = { version = "0.14", default-features = false, features = ["e2e-encryption", "sqlite", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
tokio-postgres = "0.7"
